Fix alignment of rosetta site title in mobile views

--- a/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
@@ -55,6 +55,8 @@
 	& .global-header__wporg-locale-title {
 		--wp--preset--font-size--large: 20px; /* Ensure this is set to the correct size. */
 		padding-left: 0;
+		padding-bottom: 16px;
+		padding-top: 16px;
 		flex-basis: max-content;
 		flex-grow: 1;
 		flex-shrink: 1;
